Fixed overflow mechanics for index page

--- a/style.css
+++ b/style.css
@@ -598,14 +598,17 @@ body {
 }
 
 .site-description {
+  margin: 0 auto;
+  margin-top: 58px;
+  width: 940px;
+}
+
+.site-description__wrapper {
   position: relative;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
   align-items: flex-start;
-  margin: 0 auto;
-  margin-top: 59px;
-  width: 940px;
+  margin-left: -20px;
 }
 
 .card {
@@ -615,6 +618,7 @@ body {
   width: 300px;
   min-height: 123px;
   margin-bottom: 20px;
+  margin-left: 20px;
   padding-top: 20px;
   padding-left: 23px;
   padding-right: 5px;
@@ -708,6 +712,7 @@ body {
   display: flex;
   width: 620px;
   min-height: 266px;
+  margin-left: 20px;
   overflow: hidden;
 }
 
@@ -1078,9 +1083,9 @@ body {
 .popular-manufacturers__list {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
   margin: 0;
   margin-top: 20px;
+  margin-left: -20px;
   padding: 0;
   list-style: none;
 }
@@ -1093,6 +1098,7 @@ body {
   width: 220px;
   min-height: 145px;
   margin-bottom: 20px;
+  margin-left: 20px;
 
   background-color: #ffffff;
   border: solid 1px #e5e5e5;
